# fastapi-practical-template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
tests/: test_config.py  test_main.py
